test/fail/classes/generic_method_access.lily
#[
SyntaxError: Class A has no method or property named asdf.
    from generic_method_access.lily:8:
]#

define f[A](a: A)
{
    a.asdf()
}
